# pvx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ALGORITHM_INVENTORY.md  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HPS-pitch-track.py  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  main.py  pvx.py  pvxanalysis.py  pvxbandamp.py  pvxchordmapper.py  pvxconform.py  pvxdenoise.py  pvxdeverb.py  pvxenvelope.py  pvxfilter.py  pvxformant.py  pvxfreeze.py  pvxharmmap.py  pvxharmonize.py  pvxinharmonator.py  pvxlayer.py  pvxmorph.py  pvxnoisefilter.py  pvxreshape.py  pvxresponse.py  pvxretune.py  pvxring.py  pvxringfilter.py  pvxringtvfilter.py  (+9 more)
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
Formula/: pvx.rb
audio/: ATTIBUTION-audio.md
benchmarks/: __init__.py  augment_profiles.json  baseline_augment_small.json  baseline_pvc_parity.json  baseline_small.json  metrics.py  run_augment_bench.py  run_augment_profile_suite.py  run_augment_wer_bench.py  run_bench.py  run_pvc_parity.py
docs/: AI_AUGMENTATION.md  ALGORITHM_LIMITATIONS.md  ALPHA_RELEASE.md  API_OVERVIEW.md  ARCHITECTURE.md  AUGMENTATION_COOKBOOK.md  BENCHMARKS.md  CITATION_QUALITY.md  CLI_FLAGS_REFERENCE.md  CRAZY_100.md  DEV_NOTES.md  DIAGRAMS.md  DOCS_CONTRACT.md  EXAMPLES.md  FEATURE_SIDECHAIN_EXAMPLES.md  FILE_TYPES.md  FOLLOW_MIGRATION.md  GETTING_STARTED.md  HOMEBREW.md  HOW_TO_REVIEW.md  MATHEMATICAL_FOUNDATIONS.md  ML_INTEGRATION.md  PHASINESS_IMPLEMENTATION_PLAN.md  PIPELINE_COOKBOOK.md  PVC_LESSONS.md  PVC_PARITY_MATRIX.md  PVC_PHASE3_5_ARCHITECTURE.md  PVC_PHASE6_7_ARCHITECTURE.md  PVX_ALGORITHM_PARAMS.md  PYTHON_FILE_HELP.md  QUALITY_GUIDE.md  REFACTORING_STRATEGY.md  RUBBERBAND_COMPARISON.md  WINDOW_REFERENCE.md  algorithm_limitations.json  citation_quality.json  cli_flags_reference.json  function_gallery.json  index.html  interpolation_gallery.json  (+5 more)
examples/: asr_augmentation.py  extreme_seed_10min_ambient_audible_metrics.json  huggingface_pipeline.py  (+12 more)
(+351 files in other folders)
