[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvx"
version = "0.1.0a1"
description = "Phase-vocoder DSP toolkit with pvx command suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12.1",
    "scipy>=1.10",
    "librosa>=0.10.2",
    "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "ruff>=0.9",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
pvx = "pvx.cli.pvx:main"
pvxvoc = "pvx.core.voc:main"
pvxfreeze = "pvx.cli.pvxfreeze:main"
pvxharmonize = "pvx.cli.pvxharmonize:main"
pvxconform = "pvx.cli.pvxconform:main"
pvxmorph = "pvx.cli.pvxmorph:main"
pvxwarp = "pvx.cli.pvxwarp:main"
pvxformant = "pvx.cli.pvxformant:main"
pvxtransient = "pvx.cli.pvxtransient:main"
pvxunison = "pvx.cli.pvxunison:main"
pvxdenoise = "pvx.cli.pvxdenoise:main"
pvxdeverb = "pvx.cli.pvxdeverb:main"
pvxretune = "pvx.cli.pvxretune:main"
pvxlayer = "pvx.cli.pvxlayer:main"
hps-pitch-track = "pvx.cli.hps_pitch_track:main"
pvxanalysis = "pvx.cli.pvxanalysis:main"
pvxresponse = "pvx.cli.pvxresponse:main"
pvxenvelope = "pvx.cli.pvxenvelope:main"
pvxreshape = "pvx.cli.pvxreshape:main"
pvxfilter = "pvx.cli.pvxfilter:main"
pvxtvfilter = "pvx.cli.pvxtvfilter:main"
pvxnoisefilter = "pvx.cli.pvxnoisefilter:main"
pvxbandamp = "pvx.cli.pvxbandamp:main"
pvxspeccompander = "pvx.cli.pvxspeccompander:main"
pvxring = "pvx.cli.pvxring:main"
pvxringfilter = "pvx.cli.pvxringfilter:main"
pvxringtvfilter = "pvx.cli.pvxringtvfilter:main"
pvxharmmap = "pvx.cli.pvxharmmap:main"
pvxchordmapper = "pvx.cli.pvxchordmapper:main"
pvxinharmonator = "pvx.cli.pvxinharmonator:main"
pvxtrajectoryreverb = "pvx.cli.pvxtrajectoryreverb:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
